--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/local-auth": "^3.0.1",
     "@prisma/client": "^5.17.0",
+    "date-fns": "^4.1.0",
+    "googleapis": "^154.0.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
